# none

./: CMakeLists.txt  LICENSE  widget.cpp  widget.h
